--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^5.1.9",
+    "@react-navigation/native": "^5.1.6",
     "expo": "~37.0.3",
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "^0.62.2",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
