--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "^0.62.2",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
