--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "^0.62.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-interactable": "^2.0.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
