--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "expo-updates": "~0.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
+    "react-hook-form": "^5.7.2",
     "react-native": "^0.62.2",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-interactable": "^2.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
