--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-interactable": "^2.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
