--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.4.0",
     "@react-native-community/masked-view": "^0.1.9",
     "@react-navigation/material-bottom-tabs": "^5.1.9",
     "@react-navigation/material-top-tabs": "^5.1.9",
@@ -23,8 +24,6 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-interactable": "^2.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
-    "react-native-keyboard-aware-scrollview": "^2.1.0",
-    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
