--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
         "@react-navigation/material-top-tabs": "^5.1.9",
         "@react-navigation/native": "^5.1.6",
         "@react-navigation/stack": "^5.2.11",
+        "buffer": "^5.6.0",
         "expo": "~37.0.3",
         "expo-updates": "~0.1.0",
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-native": "^0.62.2",
+        "react-native-autocomplete-input": "^4.1.0",
+        "react-native-custom-picker": "^0.4.0",
         "react-native-fs": "^2.16.6",
         "react-native-gallery-swiper": "^1.26.0",
         "react-native-gesture-handler": "~1.6.0",
@@ -27,8 +30,10 @@
         "react-native-reanimated": "~1.7.0",
         "react-native-safe-area-context": "^0.7.3",
         "react-native-screens": "~2.2.0",
+        "react-native-simple-dialogs": "^1.2.1",
         "react-native-tab-view": "^2.14.0",
         "react-native-unimodules": "~0.9.0",
+        "react-native-uuid": "^1.4.9",
         "react-native-web": "~0.11.7",
         "react-navigation": "^4.3.7"
     },
@@ -36,6 +41,7 @@
         "@babel/core": "~7.9.0",
         "@types/react": "~16.9.23",
         "@types/react-native": "~0.61.23",
+        "@types/react-native-autocomplete-input": "^4.0.1",
         "babel-preset-expo": "~8.1.0",
         "jest-expo": "~37.0.0",
         "typescript": "~3.8.3"
