--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "react-native-autocomplete-input": "^4.2.0",
         "react-native-custom-picker": "^0.4.0",
         "react-native-fs": "^2.16.6",
-        "react-native-gallery-swiper": "^1.26.0",
         "react-native-gesture-handler": "~1.6.0",
         "react-native-interactable": "^2.0.1",
         "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -34,6 +33,7 @@
         "react-native-reanimated": "~1.7.0",
         "react-native-safe-area-context": "^0.7.3",
         "react-native-screens": "~2.2.0",
+        "react-native-swiper": "^1.6.0",
         "react-native-tab-view": "^2.14.0",
         "react-native-unimodules": "~0.9.0",
         "react-native-web": "~0.11.7",
