--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-simple-toast": "^1.1.2",
+    "react-native-swipe-list-view": "^3.1.0",
     "react-native-tab-view": "^2.14.0",
     "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.7"
   },
@@ -39,6 +42,7 @@
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.23",
+    "@types/react-native-vector-icons": "^6.4.5",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0",
     "typescript": "~3.8.3"
