--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,4 +45,6 @@ target 'buddies' do
   use_native_modules!
   pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
 end
