--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-native-swiper": "^1.6.0",
         "react-native-tab-view": "^2.14.0",
         "react-native-unimodules": "~0.9.0",
+        "react-native-vector-icons": "^6.6.0",
         "react-native-web": "~0.11.7",
         "react-navigation": "^4.3.7"
     },
@@ -48,6 +49,7 @@
         "@types/react": "~16.9.23",
         "@types/react-native": "~0.61.23",
         "@types/react-native-autocomplete-input": "^4.0.1",
+        "@types/react-native-vector-icons": "^6.4.5",
         "babel-preset-expo": "~8.1.0",
         "jest-expo": "~37.0.0",
         "typescript": "~3.8.3"
