--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "react-native-unimodules": "~0.9.0",
         "react-native-vector-icons": "^6.6.0",
         "react-native-web": "~0.11.7",
-        "react-navigation": "^4.3.7"
+        "react-navigation": "^4.3.7",
+        "rnpm": "^1.9.0"
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
