--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-native-gesture-handler": "~1.6.0",
         "react-native-interactable": "^2.0.1",
         "react-native-keyboard-aware-scroll-view": "^0.9.1",
+        "react-native-maps": "^0.27.1",
         "react-native-paper": "^3.8.0",
         "react-native-popup-menu": "^0.15.7",
         "react-native-reanimated": "~1.7.0",
