Add: react-native-elements

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,4 +49,6 @@ target 'buddies' do
 
   pod 'react-native-simple-toast', :path => '../node_modules/react-native-simple-toast'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
