--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@expo/vector-icons": "^10.1.0",
         "@microsoft/signalr": "^3.1.7",
         "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
         "@react-native-community/masked-view": "^0.1.6",
@@ -28,6 +29,7 @@
         "react-native-autocomplete-input": "^4.2.0",
         "react-native-custom-picker": "^0.4.0",
         "react-native-date-picker": "^2.7.10",
+        "react-native-elements": "^2.2.1",
         "react-native-fs": "^2.16.6",
         "react-native-gesture-handler": "~1.6.0",
         "react-native-interactable": "^2.0.1",
