--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "main": "index.js",
+    "main": "./index.js",
     "scripts": {
         "android": "react-native run-android",
         "ios": "react-native run-ios",
@@ -25,6 +25,7 @@
         "react": "~16.9.0",
         "react-dom": "~16.9.0",
         "react-hook-form": "^5.7.2",
+        "react-if": "^3.4.3",
         "react-native": "^0.62.2",
         "react-native-autocomplete-input": "^4.2.0",
         "react-native-custom-picker": "^0.4.0",
@@ -48,7 +49,8 @@
         "react-native-vector-icons": "^6.6.0",
         "react-native-web": "~0.11.7",
         "react-navigation": "^4.3.7",
-        "rnpm": "^1.9.0"
+        "rnpm": "^1.9.0",
+        "tsx-control-statements": "^2.17.1"
     },
     "devDependencies": {
         "@babel/core": "~7.9.0",
