--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "name": "buddies",
-  "displayName": "buddies",
+  "displayName": "Buddies",
   "expo": {
     "name": "buddies",
     "slug": "buddies",
-    "version": "1.0.0",
+    "version": "0.0.1",
     "platforms": [
       "ios",
       "android",
@@ -12,6 +12,10 @@
     ],
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "android": {
+      "package": "com.buddies.app",
+      "versionCode": 1
+    }
   }
 }
