--- a/package.json
+++ b/package.json
@@ -1,69 +1,68 @@
 {
-    "main": "./index.js",
-    "scripts": {
-        "android": "react-native run-android",
-        "ios": "react-native run-ios",
-        "web": "expo start --web",
-        "start": "react-native start",
-        "test": "jest"
-    },
-    "dependencies": {
-        "@expo/vector-icons": "^10.1.0",
-        "@microsoft/signalr": "^3.1.7",
-        "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
-        "@react-native-community/masked-view": "^0.1.6",
-        "@react-navigation/material-bottom-tabs": "^5.1.9",
-        "@react-navigation/material-top-tabs": "^5.1.9",
-        "@react-navigation/native": "^5.1.6",
-        "@react-navigation/stack": "^5.2.11",
-        "axios": "^0.19.2",
-        "expo": "~37.0.3",
-        "expo-image-picker": "^8.4.0",
-        "expo-updates": "~0.1.0",
-        "http-status-codes": "^1.4.0",
-        "moment": "^2.25.3",
-        "react": "~16.9.0",
-        "react-dom": "~16.9.0",
-        "react-hook-form": "^5.7.2",
-        "react-if": "^3.4.3",
-        "react-native": "^0.62.2",
-        "react-native-autocomplete-input": "^4.2.0",
-        "react-native-custom-picker": "^0.4.0",
-        "react-native-date-picker": "^2.7.10",
-        "react-native-elements": "^2.2.1",
-        "react-native-fs": "^2.16.6",
-        "react-native-gesture-handler": "~1.6.0",
-        "react-native-interactable": "^2.0.1",
-        "react-native-keyboard-aware-scroll-view": "^0.9.1",
-        "react-native-maps": "^0.27.1",
-        "react-native-paper": "^3.8.0",
-        "react-native-popup-menu": "^0.15.7",
-        "react-native-reanimated": "~1.7.0",
-        "react-native-safe-area-context": "^0.7.3",
-        "react-native-screens": "~2.2.0",
-        "react-native-simple-toast": "^1.1.2",
-        "react-native-swipe-list-view": "^3.1.0",
-        "react-native-swiper": "^1.6.0",
-        "react-native-tab-view": "^2.14.0",
-        "react-native-unimodules": "~0.9.0",
-        "react-native-vector-icons": "^6.6.0",
-        "react-native-web": "~0.11.7",
-        "react-navigation": "^4.3.7",
-        "rnpm": "^1.9.0",
-        "tsx-control-statements": "^2.17.1"
-    },
-    "devDependencies": {
-        "@babel/core": "~7.9.0",
-        "@types/react": "~16.9.23",
-        "@types/react-native": "~0.61.23",
-        "@types/react-native-autocomplete-input": "^4.0.1",
-        "@types/react-native-vector-icons": "^6.4.5",
-        "babel-preset-expo": "~8.1.0",
-        "jest-expo": "~37.0.0",
-        "typescript": "~3.8.3"
-    },
-    "jest": {
-        "preset": "react-native"
-    },
-    "private": true
+  "main": "./index.js",
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web",
+    "start": "react-native start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^10.1.0",
+    "@microsoft/signalr": "^3.1.7",
+    "@react-native-community/datetimepicker": "github:react-native-community/datetimepicker",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/material-bottom-tabs": "^5.1.9",
+    "@react-navigation/material-top-tabs": "^5.1.9",
+    "@react-navigation/native": "^5.1.6",
+    "@react-navigation/stack": "^5.2.11",
+    "axios": "^0.19.2",
+    "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
+    "expo-updates": "~0.1.0",
+    "http-status-codes": "^1.4.0",
+    "moment": "^2.25.3",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-hook-form": "^5.7.2",
+    "react-if": "^3.4.3",
+    "react-native": "^0.62.2",
+    "react-native-autocomplete-input": "^4.2.0",
+    "react-native-custom-picker": "^0.4.0",
+    "react-native-date-picker": "^2.7.10",
+    "react-native-elements": "^2.2.1",
+    "react-native-fs": "^2.16.6",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-interactable": "^2.0.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paper": "^3.8.0",
+    "react-native-popup-menu": "^0.15.7",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-simple-toast": "^1.1.2",
+    "react-native-swipe-list-view": "^3.1.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^2.14.0",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.3.7",
+    "rnpm": "^1.9.0",
+    "tsx-control-statements": "^2.17.1"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.9.0",
+    "@types/react": "~16.9.23",
+    "@types/react-native": "~0.61.23",
+    "@types/react-native-autocomplete-input": "^4.0.1",
+    "@types/react-native-vector-icons": "^6.4.5",
+    "babel-preset-expo": "~8.1.0",
+    "jest-expo": "~37.0.0",
+    "typescript": "~3.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "private": true
 }
