--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expo-image-picker": "~8.1.0",
     "expo-updates": "~0.1.0",
     "http-status-codes": "^1.4.0",
+    "jetifier": "^1.6.6",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.25.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -58,6 +60,7 @@
     "@types/react-native-autocomplete-input": "^4.0.1",
     "@types/react-native-vector-icons": "^6.4.5",
     "babel-preset-expo": "~8.1.0",
+    "jest": "^26.6.3",
     "jest-expo": "~37.0.0",
     "typescript": "~3.8.3"
   },
