--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.11",
     "axios": "^0.19.2",
+    "color": "^3.1.3",
     "expo": "~37.0.3",
     "expo-image-picker": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
     "expo-updates": "~0.1.0",
     "http-status-codes": "^1.4.0",
     "jetifier": "^1.6.6",
@@ -35,6 +37,7 @@
     "react-native-elements": "^2.2.1",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-interactable": "^2.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.8.0",
@@ -55,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/color": "^3.0.1",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.23",
     "@types/react-native-autocomplete-input": "^4.0.1",
